# dotfiles

./: '  .chezmoiignore  .eslintrc.js  .gitignore  .gitmodules  .prettierrc.js  README.md  Session.vim  alacritty.yml  apt.sh  b.yml  dot_gitconfig  dot_ideavimrc  dot_vimrc  dot_zshrc  gitconfig  go.mod  go.sum  goenvrc  gosetting.json  install.sh  linter.sh  mise.toml  package-lock.json  package.json  pip.sh  poetry  tools.sh  uninstall.sh
dev-env/: .gitignore  Dockerfile  build.sh  requirments.txt
devenv/: Dockerfile  Dockerfile.anaconda  README.md  install.sh  setup-langs.sh
dot.Xmodmap/: hhkb_us_xmodmap  thinkpad_us_xmodmap
dot.Xsession/: xsessionrc
dot.tmux/: tmux.conf
dot.vim/: .netrwhist  dot.vim  vimrc
dot.zsh/: zshrc
hyper/: dot.hyper.js
idea/: ideavimrc
linter/: editorconfig  eslintrc.js  nuxt-package.json  prettierrc.js  pylintrc
private_dot_ssh/: private_config
sandbox/: 2018_06_12_000010_add_media_master_table.php
scrapbox/python/: .pre-commit-config.yaml  pyproject.toml
ssh/: config
templates/python/: .envrc  .prettierrc.yaml  README.md  install.sh  mypy.ini  pyproject.toml  pyrightconfing.json  requirements.txt  setup.cfg
tmux/: ide.sh  tmux.conf  tmux.conf.macOS  tmux.conf.win
vim/: %home%tminamiii%ghq%github.com%tMinamiii%sandbox-py%docker%fastapi-mock%app.py.swp  %home%tminamiii%ghq%github.com%tMinamiii%sandbox-py%docker%flask-mock%app.py.swp  %home%tminamiii%ghq%github.com%tMinamiii%sandbox-py%seeder%main.py.swp  .netrwhist  :w  b-init.lua  coc-settigs.json  coc-settings.json  efm-config.yaml  efm-config.yml  ideavimrc  (+8 more)
(+159 files in other folders)
