[tool.poetry]
name = "scrapbox-py"
version = "0.1.0"
description = ""
authors = ["naronA <otherthan.new@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8-bugbear = "^20.1.2"
flake8 = "^3.7.9"
ipython = "^7.11.1"
isort = "^4.3.21"
jupyter = "^1.0.0"
mypy = "^0.761"
neovim = "^0.3.1"
pre-commit = "^1.21.0"
pydocstyle = "^5.0.2"
pynvim = "^0.4.1"
pytest = "^5.3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
